@@ -7,18 +7,7 @@
   - [How to Run the Program (windows)](#how-to-run-the-program-windows)
   - [Project By](#project-by)
 ## How to Run the Program (mac)
-- Mac Version (VSCODE)
- - Download java jdk  latest.
- - For M1 user download jdk v17 from Azul.com
- - Download the latest javafx SDK (18-ea+8) aarch64 from openjfx.io.
- - Extract it somewhere you can easily access.
- - Configure your Java-run time(cmd + shift + p) and make sure you are running the correct jdk.
- - Configure the launch.json.
-   - Add this line to the configuration "vmArgs": "--module-path /path to your javafx lib --add-modules javafx.controls,javafx.fxml",
-   - Be sure to put the right path.
- - In the bottom left you will see JAVA PROJECTS.
-   - Navigate and look for the Referenced Libraries then click the plus sign to add your javafx jar files. There should be total of 8 jar files.
- - Run the App.java
+- Check this repo: [mac](https://github.com/jgrospe92/Department_with_GUI/tree/main)
   
 ## How to Run the Program (windows)
 - Windows Version (VSCODE)
